# backend-example

./: .gitignore  Cargo.toml  README.md  clippy
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/health/: mod.rs
src/api/kiosk/: mod.rs
src/api/sessions/: mod.rs
src/domain/: user.rs
