[package]
name = "backend-example"
version = "0.1.0"
description = "Backend server"
authors = ["Victor Soto <vsoto26@gmail.com>"]
edition = "2021"
repository = "https://github.com/vsotog/backend-example"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.6"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.13"
env_logger = "0.10"
log = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-humanize-rs = "0.1"
url = "2"
lazy_static = "1.4.0"
uuid = { version="1", features = ["serde", "v4"] }
